--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
@@ -12,7 +12,6 @@
 
 {% block styles %} 
 {{ super() }}
-{# bootswatch themes: https://bootswatch.com/3/ #}
 <link rel="stylesheet" href="https://bootswatch.com/3/flatly/bootstrap.min.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -24,16 +23,7 @@
 
 {% block content %}
     <div class="container">
-    {% with messages = get_flashed_messages(with_categories=true) %} 
-        {% if messages %} 
-            {% for category, message in messages %}
-            <div class="alert alert-dismissable alert-{{ category }}" role="alert">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                {{ message }}
-            </div>
-            {% endfor %} 
-        {% endif %} 
-    {% endwith %}
+    {% include 'flashes.html' %}
     {% block app_content %}{% endblock %}
     </div>
 {% include "footer.html" %}
