--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/nav.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/nav.html
@@ -1,35 +1,28 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+{% from 'bootstrap/nav.html' import render_nav_item %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">{{ g.title }}</a>
-        </div>
+        <a class="navbar-brand" href="{{url_for('main.index')}}">{{g.title}}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="nav navbar-nav mr-auto">
+
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav">
                 {% if current_user.is_anonymous %}
-                <li>
-                    <a href="{{ url_for('auth.login') }}">登录</a>
-                </li>
+                {{render_nav_item('auth.login', '登录')}}
                 {% else %}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ current_user.username }}
+                    <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">{{ current_user.username }}
                         <span class="caret"></span>
                     </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="{{ url_for('main.user', username=current_user.username) }}">我的主页</a>
-                        </li>
-                        <li>
-                            <a href="{{ url_for('auth.log_out') }}">登出</a>
-                        </li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="{{ url_for('main.user', username=current_user.username) }}">我的主页</a>
+                        <a class="dropdown-item" href="{{ url_for('auth.log_out') }}">登出</a>
                     </ul>
                 </li>
                 {% endif %}
