--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/login.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/login.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
-{% import 'bootstrap/wtf.html' as wtf %}
+{% from 'bootstrap/form.html' import render_form %}
 
 {% block app_content %}
-    <div class="page-header">
-        <h1>请登录</h1>
-    </div>
-    {{ wtf.quick_form(form) }}
-    <br>
-    <p>新用户？<a href="{{ url_for('auth.register') }}">点此注册</a></p>
+<div class="pb-2 mt-4 mb-2 border-bottom">
+    <h1>请登录</h1>
+</div>
+{{ render_form(form) }}
+<br>
+<p>新用户？<a href="{{ url_for('auth.register') }}">点此注册</a></p>
 {% endblock %}
