--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/login.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% from 'bootstrap/form.html' import render_form %}
 
-{% block app_content %}
+{% block content %}
 <div class="pb-2 mt-4 mb-2 border-bottom">
     <h1>请登录</h1>
 </div>
