--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/index.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block app_content %}
+{% block content %}
 <div class="row">
     <div class="col-md-12">
         <div class="jumbotron">
