--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/footer.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/footer.html
@@ -1,10 +1,10 @@
 <footer>
     <small>
         <ul class="company">
-            <li><a href="https://github.com/{{g.github_username}}">@ {{g.github_username}}</a></li>
+            <li><a href="https://github.com/{{ config['GITHUB_USERNAME'] }}">@ {{ config['GITHUB_USERNAME'] }}</a></li>
         </ul>
         <ul class="footer-nav">
-            <li><a href="mailto:{{g.email}}">Contact</a></li>
+            <li><a href="mailto:{{ config['EMAIL'] }}">Contact</a></li>
         </ul>
     </small>
 </footer>
