refactor code completely

--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
@@ -1,6 +1,9 @@
+{% from 'bootstrap/nav.html' import render_nav_item %}
 <!DOCTYPE html>
+<html>
 
 <head>
+    {% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{ config['SITE_NAME'] }}</title>
@@ -10,16 +13,73 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    {% endblock head %}
 </head>
 
 <body>
+    {% block nav %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+        <div class="container">
+            <a class="navbar-brand" href="{{url_for('main.index')}}">{{ config['SITE_NAME'] }}</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="nav navbar-nav mr-auto">
+
+                </ul>
+                <ul class="nav navbar-nav">
+                    {% if current_user.is_anonymous %}
+                    {{render_nav_item('auth.login', '登录')}}
+                    {% else %}
+                    <li class="dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ current_user.username
+                            }}
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="{{ url_for('main.user', username=current_user.username) }}">我的主页</a>
+                            <a class="dropdown-item" href="{{ url_for('auth.log_out') }}">登出</a>
+                        </ul>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+    {% endblock nav %}
     <main class="container">
-        {% include 'nav.html' %}
-        {% include 'flashes.html' %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert alert-dismissable alert-{{ category }}" role="alert">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
-        {% include "footer.html" %}
-        {{ bootstrap.load_js() }}
-        {{ moment.include_moment() }}
-        {{ moment.lang(g.locale) }}
+        {% block footer %}
+        <footer>
+            <small>
+                <ul class="company">
+                    <li><a href="https://github.com/{{ config['GITHUB_USERNAME'] }}">@ {{ config['GITHUB_USERNAME'] }}</a></li>
+                </ul>
+                <ul class="footer-nav">
+                    <li><a href="mailto:{{ config['EMAIL'] }}">Contact</a></li>
+                </ul>
+            </small>
+        </footer>
+        {% endblock footer %}
     </main>
+    {% block scripts %}
+    {{ bootstrap.load_js() }}
+    {{ moment.include_moment() }}
+    {% endblock %}
 </body>
+
+</html>
