--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/main/index.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/main/index.html
@@ -1,11 +1,13 @@
 {% extends 'layout.html' %}
 
+{% block title %}主页{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-md-12">
         <div class="jumbotron">
             <h1 class="display-4">Hello flask!</h1>
-            <p class="lead">此app由模板搭建而成。</p>
+            <p class="lead">欢迎来到flask的世界。</p>
             <p>
                 <a class="btn btn-primary btn-lg" role="button" href="https://zhuanlan.zhihu.com/c_193656487" target="_blank">Pythonが大好き</a>
             </p>
