--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/style.css
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/style.css
@@ -1,37 +1,19 @@
+/* global */
+
 nav {
     margin-bottom: 30px;
+}
+
+.jumbotron {
+    margin-top: 20px;
+    padding-top: 38px;
+    padding-bottom: 38px;
 }
 
 /* footer */
 
 footer {
-    margin-top: 45px;
-    padding-top: 5px;
-    border-top: 1px solid #eaeaea;
-    color: #999999;
-}
-
-footer a {
-    color: #999999;
-}
-
-footer p {
-    float: right;
-}
-
-footer ul {
-    list-style: none;
-}
-
-footer ul li {
-    float: left;
-}
-
-footer .company {
-    float: left;
-}
-
-footer .footer-nav {
-    float: right;
-    list-style: none;
+    margin: 30px 0;
+    padding: 20px 0;
+    border-top: 1px solid #e5e5e5;
 }
