--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/login.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/auth/login.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 {% from 'bootstrap/form.html' import render_form %}
 
+{% block title %}登录{% endblock %}
+
 {% block content %}
 <div class="pb-2 mt-4 mb-2 border-bottom">
     <h1>请登录</h1>
