--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/errors/500.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/errors/500.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 
+{% block title %}500 错误{% endblock %}
+
 {% block content %}
 <div class="jumbotron">
     <h1>服务器出错</h1>
