--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
@@ -6,13 +6,15 @@
     {% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{ config['SITE_NAME'] }}</title>
+    <title>{% block title %}{% endblock %} - {{config['SITE_NAME']}}</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    {% block styles %}
     {{ bootstrap.load_css() }}
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    {% endblock styles %}
     {% endblock head %}
 </head>
 
@@ -41,7 +43,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="{{ url_for('main.user', username=current_user.username) }}">我的主页</a>
+                            <a class="dropdown-item" href="{{ url_for('user.index', username=current_user.username) }}">我的主页</a>
                             <a class="dropdown-item" href="{{ url_for('auth.log_out') }}">登出</a>
                         </ul>
                     </li>
@@ -65,20 +67,22 @@
         {% block content %}{% endblock %}
         {% block footer %}
         <footer>
-            <small>
-                <ul class="company">
-                    <li><a href="https://github.com/{{ config['GITHUB_USERNAME'] }}">@ {{ config['GITHUB_USERNAME'] }}</a></li>
-                </ul>
-                <ul class="footer-nav">
-                    <li><a href="mailto:{{ config['EMAIL'] }}">Contact</a></li>
-                </ul>
-            </small>
+            <p class="float-left">
+                <small>&copy;
+                    Made by <a href="https://github.com/{{config['GITHUB_USERNAME']}}" target="_blank">{{config['GITHUB_USERNAME']}}</a>
+                    with <span class="fa fa-heart"></span>
+                </small>
+            </p>
+            <p class="float-right">
+                <small><a href="mailto:{{ config['EMAIL'] }}">Contact</a></small>
+            </p>
         </footer>
         {% endblock footer %}
     </main>
     {% block scripts %}
     {{ bootstrap.load_js() }}
     {{ moment.include_moment() }}
+    {{ moment.locale('zh-cn') }}
     {% endblock %}
 </body>
 
