--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/user/index.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/user/index.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
 
+{% block title %}{{ user.username }}{% endblock %}
+
 {% block content %}
     <table class="table table-hover">
         <tr>
             <td width="256px"><img src="{{ user.avatar(256) }}"></td>
             <td>
             <h1>{{ user.username }}</h1>
-            {% if user.last_seen %}
-            <p>最近活动于: {{ moment(user.last_seen).format('LLL') }}</p>
-            {% endif %}
+            <p><i class="fa fa-calendar"></i> 于{{ moment(user.member_since).format('LL') }}加入</p>
             </td>
         </tr>
     </table>
