change text to let tests pass

--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/main/index.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/main/index.html
@@ -32,7 +32,7 @@
         <div class="card mb-4 shadow-sm">
             <div class="card-body">
                 <h2 class="card-title"><i class="fa fa-wrench"> 完备的扩展</i></h2>
-                <p class="card-text">此项目集成了前端模板、表单、数据库、注册登录等基础扩展，方便开发者迅速构建网页。</p>
+                <p class="card-text">此项目集成了前端模板、表单、数据库、用户认证等基础扩展，方便开发者迅速构建网页。</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href="#"><button type="button" class="btn btn-primary">More</button></a>
