--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/layout.html
@@ -13,7 +13,7 @@
     {{ bootstrap.load_css() }}
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     {% endblock styles %}
     {% endblock head %}
 </head>
@@ -34,13 +34,15 @@
                     {% else %}
                     <li class="dropdown">
                         <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ current_user.username
-                            }}
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="{{ current_user.avatar(22) }}">
                             <span class="caret"></span>
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="{{ url_for('user.index', username=current_user.username) }}">我的主页</a>
-                            <a class="dropdown-item" href="{{ url_for('auth.log_out') }}">登出</a>
+                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                            <h6 class="dropdown-header">{{ current_user.username}}</h6>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{{ url_for('user.index', username=current_user.username) }}"><span
+                                    class="fa fa-user"></span>&nbsp;我的主页</a>
+                            <a class="dropdown-item" href="{{ url_for('auth.log_out') }}"><span class="fa fa-power-off"></span>&nbsp;登出</a>
                         </ul>
                     </li>
                     {% endif %}
